[package]
name = "graphics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26.1"
env_logger = "0.9"
log = "0.4"
wgpu = "0.12"
pollster = "0.2.5"
bytemuck = { version = "1.4", features = [ "derive" ] }
image = "0.24" 
anyhow = "1.0.57"
cgmath = "0.18"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
